cmake_minimum_required(VERSION 2.8)

project(EQuilibre)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

find_package(Qt4 4.6.0 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
find_package(ZLIB 1.0.0 REQUIRED)
find_package(ODE 0.12.0 REQUIRED)
include(${QT_USE_FILE})
include_directories(${ZLIB_INCLUDE_DIRS})
add_definitions(${ODE_DEFINITIONS})

if( WIN32 )
    set(GLEW_LIB_PATH "" CACHE PATH "Path to the GLEW library directory.")
    set(GLEW_INCLUDE_PATH "" CACHE PATH "Path to the GLEW include directory.")
    if(NOT ${GLEW_LIB_PATH} STREQUAL "" AND EXISTS "${GLEW_LIB_PATH}/glew32.lib")
      set(GLEW_LIBRARIES "${GLEW_LIB_PATH}/glew32.lib" OpenGL32.lib)
    else()
      message(FATAL_ERROR "The path to the GLEW library directory must be set.")
    endif()
    if(NOT ${GLEW_INCLUDE_PATH} STREQUAL "" AND EXISTS ${GLEW_INCLUDE_PATH}/GL/glew.h)
      include_directories(${GLEW_INCLUDE_PATH})
    else()
      message(FATAL_ERROR "The path to the GLEW include directory must be set.")
    endif()
    set(SYSTEM_LIBRARIES )
else( WIN32 )
    set(GLEW_LIBRARIES GLEW GL)
    set(SYSTEM_LIBRARIES dl pthread)
endif( WIN32 )

if(WIN32)
    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include/EQuilibre/Platform/win32")
    add_definitions(/DM_PI=3.14159265358979323846)
endif(WIN32)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

set(USE_VTUNE_PROFILER FALSE CACHE BOOL "Compile tools with frame hooks for the Intel VTune profiler.")
if(USE_VTUNE_PROFILER)
    set(VTUNE_PROFILER_DIR "" CACHE PATH "Path to the directory where the Intel VTune profiler is installed.")
    if(NOT EXISTS "${VTUNE_PROFILER_DIR}/include/ittnotify.h")
        message(FATAL_ERROR "The directory where Intel VTune is installed must be specified.")
    endif()
    add_definitions(-DUSE_VTUNE_PROFILER)
    include_directories("${VTUNE_PROFILER_DIR}/include")
    if(${CMAKE_SIZEOF_VOID_P} EQUAL 8)
        link_directories("${VTUNE_PROFILER_DIR}/lib64")
    else()
        link_directories("${VTUNE_PROFILER_DIR}/lib32")
    endif(${CMAKE_SIZEOF_VOID_P} EQUAL 8)
endif(USE_VTUNE_PROFILER)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")

subdirs(lib)
subdirs(tools)
